1990-05-16  dickey@software.org

	* src/dedscan.c:
	added code to strip prefixes which are common to the new-wd,
	but not among the other arguments.

1990-05-11  dickey@software.org

	* test/run_test.sh: set umask to make test repeatable

1990-05-11  ste_cm@software.org

	* test/run_test.sh:
	BASELINE Mon Aug 13 15:06:41 1990 -- LINCNT, ADA_TRANS

	* test/run_test.sh: BASELINE Mon Jun 10 10:09:56 1991 -- apollo sr10.3

1990-05-07  dickey@software.org

	* src/ded.c: make "-t" option inherit into subprocesses

1990-04-27  dickey@software.org

	* src/version.h:
	corrections/modifications to pathname resolution to try to
	avoid confusion in ".." sequences with symbolic links vs bugs
	found when invoking ded while su'ing.  To do this, reduced
	usage of 'abspath()' in favor of 'abshome()'.

1990-04-27  ste_cm@software.org

	* src/version.h: BASELINE Mon Apr 30 09:54:01 1990 -- (CPROTO)

1990-04-25  dickey@software.org

	* src/dedscan.c:
	corrected code which tries to circumvent unreadable old_wd
	(had broken the 'R' command in that fix...)

1990-04-25  ste_cm@software.org

	* src/dedscan.c: BASELINE Mon Apr 30 09:54:01 1990 -- (CPROTO)

1990-04-25  dickey@software.org

	* src/dedscan.c:
	refined pathname-conversion using 'abshome()' followed by
	'getwd()' when needed, rather than 'abspath()' to avoid
	confusion with symbolic links.

1990-04-24  dickey@software.org

	* src/ded2s.c:
	corrected 'time2s()' to handle dates past coming midnight

1990-04-24  ste_cm@software.org

	* src/ded2s.c: BASELINE Mon Apr 30 09:54:01 1990 -- (CPROTO)

	* src/ded2s.c: BASELINE Mon Aug 13 15:06:41 1990 -- LINCNT, ADA_TRANS

1990-04-24  dickey@software.org

	* src/dedscan.c:
	modified 'argstat()' so that if shell (e.g., Bourne) passes
	a "~" argument, we expand it properly.

1990-04-23  dickey@software.org

	* src/dedscan.c:
	modify initial 'chdir()' so we try to recover from unreadable
	directory (e.g., when invoking "su" from a protected directory)

1990-04-18  dickey@software.org
