@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19900516
+MANIFEST for ded, version t19900518
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
